// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Duplicate Dependency Detection > should detect exact duplicate dependencies 1`] = `
[
  {
    "label": "Total Dependencies",
    "name": "totalDependencies",
    "type": "stat",
    "value": "2",
  },
  {
    "label": "Direct Dependencies",
    "name": "directDependencies",
    "type": "stat",
    "value": "2",
  },
  {
    "label": "Dev. Dependencies",
    "name": "devDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "CommonJS Dependencies",
    "name": "cjsDependencies",
    "type": "stat",
    "value": "4",
  },
  {
    "label": "ESM Dependencies",
    "name": "esmDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "Install Size",
    "name": "installSize",
    "type": "stat",
    "value": "244.0 B",
  },
  {
    "label": "Package Name",
    "name": "packageName",
    "type": "stat",
    "value": "test-package",
  },
  {
    "label": "Version",
    "name": "version",
    "type": "stat",
    "value": "1.0.0",
  },
  {
    "name": "duplicateDependencies",
    "type": "stat",
    "value": "1",
  },
  {
    "message": "[34m[duplicate dependency][39m [1mshared-lib[22m has 2 installed versions:
 [90m2.0.0[39m via [90mroot > package-a > shared-lib[39m
 [90m2.0.0[39m via [90mroot > package-b > shared-lib[39m
Suggestions:    [34m💡[39m [90mConsider standardizing on version 2.0.0 (used by 2 dependencies)[39m    [34m💡[39m [90mCheck if newer versions of consuming packages (package-a, package-b) would resolve this duplicate[39m",
    "score": 0,
    "severity": "warning",
    "type": "message",
  },
]
`;

exports[`Duplicate Dependency Detection > should detect version conflicts 1`] = `
[
  {
    "label": "Total Dependencies",
    "name": "totalDependencies",
    "type": "stat",
    "value": "2",
  },
  {
    "label": "Direct Dependencies",
    "name": "directDependencies",
    "type": "stat",
    "value": "2",
  },
  {
    "label": "Dev. Dependencies",
    "name": "devDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "CommonJS Dependencies",
    "name": "cjsDependencies",
    "type": "stat",
    "value": "4",
  },
  {
    "label": "ESM Dependencies",
    "name": "esmDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "Install Size",
    "name": "installSize",
    "type": "stat",
    "value": "292.0 B",
  },
  {
    "label": "Package Name",
    "name": "packageName",
    "type": "stat",
    "value": "test-package",
  },
  {
    "label": "Version",
    "name": "version",
    "type": "stat",
    "value": "1.0.0",
  },
  {
    "name": "duplicateDependencies",
    "type": "stat",
    "value": "1",
  },
  {
    "message": "[33m[duplicate dependency][39m [1mshared-lib[22m has 3 installed versions:
 [90m1.0.0[39m via [90mroot > package-a > shared-lib[39m
 [90m1.0.0[39m via [90mroot > package-b > shared-lib[39m
 [90m2.0.0[39m via [90mshared-lib[39m
Suggestions:    [34m💡[39m [90mConsider standardizing on version 1.0.0 (used by 2 dependencies)[39m    [34m💡[39m [90mCheck if newer versions of consuming packages (package-a, package-b) would resolve this duplicate[39m",
    "score": 0,
    "severity": "warning",
    "type": "message",
  },
]
`;

exports[`Duplicate Dependency Detection > should generate suggestions for duplicates 1`] = `
[
  {
    "label": "Total Dependencies",
    "name": "totalDependencies",
    "type": "stat",
    "value": "2",
  },
  {
    "label": "Direct Dependencies",
    "name": "directDependencies",
    "type": "stat",
    "value": "2",
  },
  {
    "label": "Dev. Dependencies",
    "name": "devDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "CommonJS Dependencies",
    "name": "cjsDependencies",
    "type": "stat",
    "value": "4",
  },
  {
    "label": "ESM Dependencies",
    "name": "esmDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "Install Size",
    "name": "installSize",
    "type": "stat",
    "value": "244.0 B",
  },
  {
    "label": "Package Name",
    "name": "packageName",
    "type": "stat",
    "value": "test-package",
  },
  {
    "label": "Version",
    "name": "version",
    "type": "stat",
    "value": "1.0.0",
  },
  {
    "name": "duplicateDependencies",
    "type": "stat",
    "value": "1",
  },
  {
    "message": "[34m[duplicate dependency][39m [1mshared-lib[22m has 2 installed versions:
 [90m2.0.0[39m via [90mroot > package-a > shared-lib[39m
 [90m2.0.0[39m via [90mroot > package-b > shared-lib[39m
Suggestions:    [34m💡[39m [90mConsider standardizing on version 2.0.0 (used by 2 dependencies)[39m    [34m💡[39m [90mCheck if newer versions of consuming packages (package-a, package-b) would resolve this duplicate[39m",
    "score": 0,
    "severity": "warning",
    "type": "message",
  },
]
`;

exports[`Duplicate Dependency Detection > should not detect duplicates when there are none 1`] = `
[
  {
    "label": "Total Dependencies",
    "name": "totalDependencies",
    "type": "stat",
    "value": "1",
  },
  {
    "label": "Direct Dependencies",
    "name": "directDependencies",
    "type": "stat",
    "value": "1",
  },
  {
    "label": "Dev. Dependencies",
    "name": "devDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "CommonJS Dependencies",
    "name": "cjsDependencies",
    "type": "stat",
    "value": "1",
  },
  {
    "label": "ESM Dependencies",
    "name": "esmDependencies",
    "type": "stat",
    "value": "0",
  },
  {
    "label": "Install Size",
    "name": "installSize",
    "type": "stat",
    "value": "47.0 B",
  },
  {
    "label": "Package Name",
    "name": "packageName",
    "type": "stat",
    "value": "test-package",
  },
  {
    "label": "Version",
    "name": "version",
    "type": "stat",
    "value": "1.0.0",
  },
]
`;
